infra/k8s/backend-deployment.yaml
# backend-deployment.yaml modifié avec initContainer
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harivelo
      component: backend
  template:
    metadata:
      labels:
        app: harivelo
        component: backend
    spec:
      containers:
      - name: backend
        image: 240676008744.dkr.ecr.eu-west-3.amazonaws.com/harivelo-app-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: uploads
          mountPath: /app/uploads
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
      volumes:
      - name: uploads
        emptyDir: {}
      imagePullSecrets:
      - name: regcred
